--- a/spotify/src/App.css
+++ b/spotify/src/App.css
@@ -41,9 +41,10 @@ h1{
   position: relative;
   text-align: left;
   background-color: grey;
-  width: 90%;
+  width: 70%;
   height: 50%;
   padding: 5%;
+  padding-right: 25%;
 }
 
 .info {
